<resources>
    <string name="app_name">TrassTarea</string>
    <string name="empezar">Empezar</string>
    <string name="tus_tareas_tu_ritmo_tu_xito">Tus tareas, tu ritmo, tu éxito.</string>
    <string name="icono_de_la_aplicacion">Icono de la aplicacion</string>
    <string name="todo">TODO</string>
    <string name="d_as">días</string>
    <string name="quedan">Quedan:</string>
    <string name="titulo">Título</string>
    <string name="fecha">00/00/00</string>
    <string name="dias">00</string>
    <string name="notareas">No hay tareas disponibles amigo</string>
    <string name="action_settings">Salir</string>
    <string name="action_favorite">favorite\n</string>
    <string name="action_acercade">Acerca de\n</string>
    <string name="add_tarea">Add tarea</string>
    <string name="aceptar">Aceptar</string>
    <string name="salir">Salir</string>
    <string name="cancelar">Cancelar</string>
    <string name="Descripcion">Descripción\n</string>
    <string name="edit">Editar\n</string>
    <string name="borrar">Borrar\n</string>
    <string name="add_task">Añadir tarea</string>
    <string name="prioritaria">Prioritaria?</string>
    <string name="siguiente">Siguiente</string>
    <string name="fechacreacion">FechaCreacion</string>
    <string name="fecha_objetivo">Fecha Objetivo</string>
    <string name="hintDescription">Escribe la descripción aquí…</string>
    <string name="volver">Volver</string>
    <string name="crear_tarea">Crear tarea</string>
    <string name="confirmar">Confirmar</string>
    <string name="IP">10.0.2.2</string>
    <string name="bd">bd</string>
    <string name="usuario">usuario</string>
    <string name="password" />
    <string name="restablecer" translatable="false">Restablecer</string>
    <string name="settings" translatable="false">Preferencias</string>
    <string name="port" translatable="false">1001</string>
    <string name="estadisticas" translatable="false">Estadisticas</string>
    <string name="audio" translatable="false">audio</string>
    <string name="documento" translatable="false">documento</string>
    <string name="ruta_imagen" translatable="false">ruta/imagen</string>
    <string name="ruta_del_documento" translatable="false">Ruta del Documento</string>
    <string name="ruta_del_video" translatable="false">Ruta del Video</string>
    <string name="ruta_del_audio" translatable="false">Ruta del Audio</string>
    <string name="ruta_de_la_imagen" translatable="false">Ruta de la Imagen</string>
    <string name="documentos" translatable="false">Documento</string>
    <string name="audios" translatable="false">Audio</string>
    <string name="imagens" translatable="false">Imagen</string>
    <string name="videos" translatable="false">Video</string>
    <string name="detalles" translatable="false">Detalles</string>
</resources>