<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="1dp"
    app:cardMaxElevation="0dp"
    app:cardPreventCornerOverlap="true"
    android:clickable="true"
    app:cardUseCompatPadding="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/taskLayout">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/todo"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:src="@drawable/baseline_stars_24_black" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/imageView"
            android:text="@string/titulo"
            android:textSize="17sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="90dp"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo"
            android:layout_alignStart="@id/imageView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@id/progressBar"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:text="@string/fecha" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/fecha"
            android:layout_below="@id/titulo"
            android:layout_marginStart="15dp"
            android:layout_marginTop="22dp"
            android:textSize="15sp"
            android:text="@string/quedan" />

        <TextView
            android:id="@+id/tiempoRestante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView7"
            android:layout_below="@id/titulo"
            android:layout_marginStart="4dp"
            android:layout_marginTop="22dp"
            android:textSize="15sp"
            android:text="@string/dias" />

        <TextView
            android:id="@+id/dias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tiempoRestante"
            android:layout_below="@id/titulo"
            android:layout_marginStart="6dp"
            android:layout_marginTop="22dp"
            android:textSize="15sp"
            android:text="@string/d_as" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>

